# litecoin_forecasting

./: LICENSE.MD  README.md  README_min.md  main.py  pyproject.toml  requirements.txt
notebooks/: Crypto_Growth_Simulation.ipynb  LTC_Growth_Simulation.ipynb  crypto_correlation.ipynb  ltc_forecast.py
py_scripts/: ltc_forecast.py
