[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A Python project with version-specific dependencies."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    # Python 3.8 specific dependencies
    "matplotlib==3.7.5; python_version == '3.8'",
    "numpy==1.24.4; python_version == '3.8'",
    "pandas==2.0.3; python_version == '3.8'",
    "requests==2.32.3; python_version == '3.8'",
    "selenium==4.26.1; python_version == '3.8'",

    # Python 3.9 specific dependencies
    "matplotlib==3.8.0; python_version == '3.9'",
    "numpy==1.26.0; python_version == '3.9'",
    "pandas==2.1.2; python_version == '3.9'",
    "requests==2.32.3; python_version == '3.9'",
    "selenium==4.27.1; python_version == '3.9'",

    # Python 3.10 specific dependencies
    "matplotlib==3.8.0; python_version == '3.10'",
    "numpy==1.26.4; python_version == '3.10'",
    "pandas==2.2.2; python_version == '3.10'",
    "requests==2.33.0; python_version == '3.10'",
    "selenium==4.27.1; python_version == '3.10'",

    # Python 3.11 and above specific dependencies
    "matplotlib==3.8.0; python_version >= '3.11'",
    "numpy==1.26.4; python_version >= '3.11'",
    "pandas==2.2.3; python_version >= '3.11'",
    "requests==2.33.0; python_version >= '3.11'",
    "selenium==4.27.1; python_version >= '3.11'",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Author Website" = "https://www.leonshpaner.com"
"Litewallet Website" = "https://litewallet.io/""
"GitHub Repository" = "https://github.com/litecoin-foundation/litecoin_forecasting/"

[tool.setuptools.packages.find]
where = ["src"]
