[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda_toolkit"
version = "0.0.12"
description = "A Python library for EDA, including visualizations, directory management, data preprocessing, reporting, and more."
readme = { file = "README_min.md", content-type = "text/markdown" }
authors = [
    { name = "Leonid Shpaner", email = "lshpaner@ucla.edu" },
    { name = "Oscar Gil" }
]
requires-python = ">=3.7.4"
dependencies = [
    "matplotlib>=3.5.3, <=3.9.2",
    "numpy>=1.21.6, <=2.1.2",
    "pandas>=1.3.5, <=2.2.3",
    "requests>=2.31.0, <=2.32.0",
    "seaborn>=0.12.2, <=0.13.2",
    "selenium>=3.14.0, <=4.26.1", 
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Correct place for URLs under [project.urls]
[project.urls]
"Author Website" = "https://www.leonshpaner.com"
"Litewallet Website" = "https://litewallet.io/""
"GitHub Repository" = "https://github.com/litecoin-foundation/litecoin_forecasting/"

[tool.setuptools.packages.find]
where = ["src"]